--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>pdx voxels</title>
+    <title>网页版我的世界3D</title>
     <style type="text/css">
       body, html { margin: 0; padding: 0; }
     </style>
